--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>bestincrime</title>
+  <title>toggle</title>
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/style.css">
 </head>
